k8s/course-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-service
  template:
    metadata:
      labels:
        app: course-service
    spec:
      containers:
      - name: course-container
        image: 0402danishansari/course-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
