k8s/student-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
      - name: student-container
        image: 0402danishansari/student-service:IMAGE_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
