k8s/course-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-service
spec: 
  type: ClusterIP
  selector:
    app: course-service
  ports:
  - port: 8080
    targetPort: 8080
