k8s/student-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  type: ClusterIP
  selector:
    app: student-service
  ports:
  - port: 8080
    targetPort: 8080
